Update welkom terug

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,12 +1,11 @@
 <ion-content class="background-image" no-scroll padding>
   <ion-img src="../assets/images/Recipely.png"></ion-img>
   <div *ngIf="authenticationService.userData | async">
-      <h3 >Welkom terug! {{ ' ' + (authenticationService.userData | async)?.email }}</h3>
-      <p>Klik hier om weer naar de app toe te gaan!</p>
-      <button (click)="loggedIn()"> Bekijk recepten!</button>
-      <p>Is dit niet je account? Klik dan op uitloggen en log vervolgens dan in je eigen account.</p>
-      <button (click)="signOut()">Logout</button>
-    
+      <h3 class="ion-text-center home-color">Welkom terug! {{ ' ' + (authenticationService.userData | async)?.email }}</h3>
+      <p class="ion-text-center home-color">Klik hier om weer naar de app toe te gaan!</p>
+      <ion-button color="success" shape="round" (click)="loggedIn()"> Bekijk recepten!</ion-button>
+      <p class="ion-text-center home-color">Is dit niet je account? Klik dan op uitloggen en log vervolgens dan in je eigen account.</p>
+      <ion-button color="danger" shape="round" (click)="signOut()">Loguit</ion-button>
   </div>
 
   <div *ngIf="!(authenticationService.userData | async)">
