--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -208,7 +208,7 @@
 
   <ion-item>
     <ion-input formControlName="video"  autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true"
-      inputmode="text" placeholder="Voeg een link toe" required="true"></ion-input>
+      inputmode="text" placeholder="Voeg een link toe" required="false"></ion-input>
     <ion-icon name="md-link" slot="end"></ion-icon>
   </ion-item>
   <ion-item>
