--- a/src/app/recept/recept.page.html
+++ b/src/app/recept/recept.page.html
@@ -50,7 +50,7 @@
           <ion-button color="primary" (click)="addFavorite()">Voeg toe aan favorieten</ion-button>
         </div>
         <div *ngIf="!favCheck">
-          <ion-button  (click)="deleteFavorite()" >Verwijder als favorite</ion-button>
+          <ion-button  (click)="deleteFavorite()" >Verwijder als favoriet</ion-button>
         </div>
         
       </section>
