--- a/src/app/review/review.page.html
+++ b/src/app/review/review.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color='secondary'>
     <ion-title>Beoordelingen</ion-title>
     <ion-buttons slot="start">
         <ion-back-button></ion-back-button>
@@ -11,7 +11,7 @@
   <ion-list *ngFor="let item of recipe">
     <ion-item>
       <ion-label>
-        <h5>Review door: {{ item.user }}</h5>
+        <p>Review door: {{ item.user }}</p>
           <p>
             <ngb-rating max="5" readonly="true" rate="{{item.rating}}">
             <ng-template let-fill="fill" let-index="index">
@@ -20,7 +20,7 @@
         </ngb-rating>
       </p>
           
-        <p>{{item.review}}</p>
+        <h5>{{item.review}}</h5>
       </ion-label>
     </ion-item>
   </ion-list>
