--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,5 +1,5 @@
 <ion-header  *ngIf="authenticationService.userData | async">
-  <ion-toolbar>
+  <ion-toolbar color='secondary'>
     <ion-title>Voeg een recept toe</ion-title>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
