--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-content class="background-image" no-scroll padding>
-  <ion-img src="../assets/images/Recipely.png"></ion-img>
+  <ion-img src="../assets/images/Recipely.jpg"></ion-img>
   <div *ngIf="authenticationService.userData | async">
       <h3 class="ion-text-center home-color">Welkom terug! {{ ' ' + (authenticationService.userData | async)?.email }}</h3>
       <p class="ion-text-center home-color">Klik hier om weer naar de app toe te gaan!</p>
