--- a/src/app/newpassword/newpassword.page.html
+++ b/src/app/newpassword/newpassword.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="secondary">
     <ion-title>Nieuw wachtwoord</ion-title>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
