--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color= "secondary">
     <ion-title>Maak een account aan</ion-title>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
@@ -35,7 +35,7 @@
       </ng-container>
     </div>
     
-    <ion-button expand="full" (click)="signUp()" [disabled]="!validations_form.valid">Registreer</ion-button>
+    <ion-button shape="round" expand="full" (click)="signUp()" [disabled]="!validations_form.valid">Registreer</ion-button>
     <label class="error-message">{{errorMessage}}</label>
     <label class="success-message">{{successMessage}}</label>
   </form>
@@ -44,6 +44,6 @@
   <ion-button expand="full" color="danger" (click)="goLoginPage()">Meld je aan</ion-button> -->
 
   <p class="go-to-login" text-center>Al een account?</p>
-  <ion-button expand="full" color="primary" (click)="goLoginPage()">Login</ion-button>
+  <ion-button shape="round" expand="full" color="primary" (click)="goLoginPage()">Login</ion-button>
 
 </ion-content>
