--- a/src/app/newpassword/newpassword.page.html
+++ b/src/app/newpassword/newpassword.page.html
@@ -3,17 +3,18 @@
     <ion-title>Nieuw wachtwoord</ion-title>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
-      </ion-buttons>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-
   <ion-item>
-    <ion-label  position="floating" color="primary">Email</ion-label>
+    <ion-label position="floating" color="primary">Email</ion-label>
     <ion-input type="text" [(ngModel)]="email"></ion-input>
   </ion-item>
 
-  <ion-button shape="round" fill="outline" (click)="uploadAlert()">Stuur email</ion-button>
+  <ion-button shape="round" fill="outline" (click)="SendPassword()"
+    >Stuur email</ion-button
+  >
   <label class="error-message">{{errorMessage}}</label>
 </ion-content>
