--- a/src/app/recept/recept.page.html
+++ b/src/app/recept/recept.page.html
@@ -1,20 +1,20 @@
 <ion-header>
-  <ion-toolbar color= "secondary">
+  <ion-toolbar color="secondary">
     <ion-title>Recept</ion-title>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
-      </ion-buttons>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-   <div *ngFor="let item of recipe">
-    <img src="{{ item.image }}"/>
+  <div *ngFor="let item of recipe">
+    <img src="{{ item.image }}" />
 
     <div class="ion-text-center">
       <h1>{{item.name}}</h1>
     </div>
-  
+
     <ion-list>
       <ion-item>
         <div class="ion-text-center">
@@ -40,24 +40,23 @@
           <h5>{{item.ingredient}}</h5>
         </div>
       </ion-item>
-
     </ion-list>
 
-      <section>
-        <ion-button (click)="goToSteps()" color="danger">Stappen</ion-button>
-        <ion-button (click)="goToReview()"color="danger">Beoordeel recept</ion-button>
-        <div *ngIf="!favCheck">
-          <ion-button color="primary" (click)="addFavorite()">Voeg toe aan favorieten</ion-button>
-        </div>
-        <div *ngIf="!favCheck">
-          <ion-button  (click)="deleteFavorite()" >Verwijder als favoriet</ion-button>
-        </div>
-        
-      </section>
-
-
-
-  
-
-   </div>
-  </ion-content>
+    <section>
+      <ion-button (click)="goToSteps()" color="danger">Stappen</ion-button>
+      <ion-button (click)="goToReview()" color="danger"
+        >Beoordeel recept</ion-button
+      >
+      <div *ngIf="!favCheck">
+        <ion-button color="primary" (click)="addFavorite()"
+          >Voeg toe aan favorieten</ion-button
+        >
+      </div>
+      <div *ngIf="!favCheck">
+        <ion-button (click)="deleteFavorite()"
+          >Verwijder als favoriet</ion-button
+        >
+      </div>
+    </section>
+  </div>
+</ion-content>
