--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -3,22 +3,20 @@
     <ion-title>Recepten van {{this.user}}</ion-title>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-      </ion-buttons>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div *ngFor="let item of recipeList">
-    <ion-card tappable (click)="toRecipe(item.id)" >
-      <img src="{{ item.image }}"/>
+    <ion-card tappable (click)="toRecipe(item.id)">
+      <img src="{{ item.image }}" />
       <ion-card-header>
         <ion-card-subtitle>Bevat {{ item.ingredient }}</ion-card-subtitle>
-        <ion-card-title>{{item.name}}</ion-card-title>  
+        <ion-card-title>{{item.name}}</ion-card-title>
         <ion-card-content>Gemaakt door {{item.user}}</ion-card-content>
       </ion-card-header>
-      <ion-card-content>
-      </ion-card-content>
+      <ion-card-content> </ion-card-content>
     </ion-card>
   </div>
-
 </ion-content>
